:recycle: refactor test code to use new test cases and matchers and have single statement unit tests. Fixes #22